[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Donatas <donatas.gostautas@gjensidige.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
