[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Donatas <donatas.gostautas@gjensidige.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
loguru = "^0.7.2"
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
